examples/fail/division_by_zero.uplp
-- test: fail { "category": "Evaluation.division_by_zero" }
let zero = 0 in 1 / zero